tests/errors/substructural/check/copy_of_mut_ref.sim

        fn f(r: &mut i64) {
            s: &mut i64;
            entry:
            s = copy r;
            return
        }
        